--- a/index.html
+++ b/index.html
@@ -1,96 +1,141 @@
+<!-- jonas oosterlinck -->
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Herdius - Design excersize</title>
+        <title>Simon Coudeville - Examen User Interface Design</title>
         <meta name="description" content="This is my HTML5 boilerplate.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="msapplication-TileColor" content="#5051db">
-        <meta name="theme-color" content="#5051db">
+        <meta name="msapplication-TileColor" content="#e85e00">
+        <meta name="theme-color" content="#e85e00">
 
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5051db">
+        <link rel="icon" href="favicon.svg">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="manifest" href="manifest.json">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
-        <div class="o-row o-row--md">
-            <h1>
-                Herdius
-            </h1>
-            <figure>
-                <img src="png/illustration-main.png" alt="Main illustration">
-            </figure>
-
-            <h2>
-                Powerful Cryptocurrency Platform
-            </h2>
-            <p>
-                Herdius intends to build a highly performant decentralized financial platform. Using the latest innovation in distributed systems design, we are aiming to be the next-generation infrastructure for the entire cryptocurrency ecosystem.
-            </p>
-            <p>
-                <a href="#!">
-                    Download Whitepaper
-                </a>
-            </p>
-
-            <figure>
-                <img src="img/illustration-f1.png" alt="Feature 1 illustration">
-            </figure>
-            <h2>
-                Truly Decentralized
-                Exchange
-            </h2>
-            <p>
-                Herdius’ infrastructure intends to be fully distributed, highly performant and secure. With our decentralized exchange, we aim at facilitating trading of all digital assets - regardless of the underlying blockchain. We envisage our exchange to provide superior liquidity and user experience without middlemen and single points of failure, resulting in more security for you and your private keys!.
-            </p>
-            <p>
-                <a href="#!">
-                    More info
-                </a>
-            </p>
-
-            <figure>
-                <img src="img/illustration-f2.png" alt="Feature 2 illustration">
-            </figure>
-            <h2>
-                Instant Transactions
-                Across Chains
-            </h2>
-            <p>
-                We aim to dramatically improve the user experience in the token economy. Herdius' goal is to enable users to transact assets between different chains in almost no time. We want our efficient sidechain approach to allow for fast & cheap transactions, regardless of the tokens’ underlying chain. Our mission is to build a highly scalable and performant architecture that is expected to significantly reduce the confirmation times.
-            </p>
-            <p>
-                <a href="#!">
-                    More info
-                </a>
-            </p>
-
-            <figure>
-                <img src="img/illustration-f3.png" alt="Feature 3 illustration">
-            </figure>
-            <h2>
-                Scalable Infrastructure
-                for the Token Economy
-            </h2>
-            <p>
-                Herdius’ infrastructure intends to be fully distributed, highly performant and secure. With our decentralized exchange, we aim at facilitating trading of all digital assets - regardless of the underlying blockchain. We envisage our exchange to provide superior liquidity and user experience without middlemen and single points of failure, resulting in more security for you and your private keys!.
-            </p>
-            <p>
-                <a href="#!">
-                    More info
-                </a>
-            </p>
-
-            <figure>
-                <img src="img/intro-img.jpg" alt="Picture of Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
-                <figcaption>Dr. James Hamrick & Sarika Vora in their weekly team stand-up</figcaption>
-            </figure>
-        </div>
+        <header class="o-row o-row--md" style="background-color: #ffe01b;">
+            <div class="o-container">
+                <div class="c-header">
+                    <div class="c-header__logo">
+                        <div class="c-logo">
+                            <svg class="c-logo__symbol" xmlns="http://www.w3.org/2000/svg" width="178.51" height="48" viewBox="0 0 178.51 48">
+                                <g id="Logo" transform="translate(-227.495 -261.518)">
+                                  <g id="Mailchimp" transform="translate(279.921 275.706)">
+                                    <path id="Path_1" data-name="Path 1" d="M511.843,355.151a4.407,4.407,0,0,0-3.946,2.967c-.291.65-.372,1.163-.608,1.163-.332,0-.094-.446-.366-1.436a3.588,3.588,0,0,0-3.726-2.694c-2.408,0-3.439,2.034-3.928,3.152-.334.764-.335.978-.592.978-.372,0-.064-.607.1-1.32a5.948,5.948,0,0,0,.079-2.479h-3.817v14.352h5.21v-7.141c0-1.409.589-3.2,1.6-3.2,1.167,0,1.4.9,1.4,2.556v7.784h5.231v-7.144c0-1.254.512-3.2,1.607-3.2,1.183,0,1.393,1.259,1.393,2.556v7.781h5.137v-8.44C516.621,357.648,515.3,355.151,511.843,355.151Z" transform="translate(-495.044 -350.991)"/>
+                                    <path id="Path_2" data-name="Path 2" d="M963.136,355.151a4.407,4.407,0,0,0-3.946,2.967c-.291.65-.372,1.163-.608,1.163-.332,0-.11-.567-.366-1.436a3.53,3.53,0,0,0-3.726-2.694c-2.408,0-3.439,2.034-3.928,3.152-.334.764-.335.978-.592.978-.372,0-.064-.607.1-1.32a5.947,5.947,0,0,0,.079-2.479h-3.817v14.352h5.21v-7.141c0-1.409.589-3.2,1.6-3.2,1.167,0,1.4.9,1.4,2.556v7.784h5.231v-7.144c0-1.254.512-3.2,1.607-3.2,1.183,0,1.393,1.259,1.393,2.556v7.781h5.137v-8.44C967.914,357.648,966.593,355.151,963.136,355.151Z" transform="translate(-857.907 -350.991)"/>
+                                    <path id="Path_3" data-name="Path 3" d="M618.947,355.168a16.413,16.413,0,0,0-6.855,1.467v4.313s3.163-1.818,5.728-1.818c2.048,0,2.3,1.1,2.206,2.021a11.189,11.189,0,0,0-2.393-.156c-4.246,0-6.39,1.93-6.39,5.024a4.148,4.148,0,0,0,4.439,4.162,4.883,4.883,0,0,0,4.664-2.935c.277-.655.328-1.1.577-1.1.284,0,.189.316.175.968a10.506,10.506,0,0,0,.211,2.732h3.927v-7.063C625.236,358.377,623.676,355.168,618.947,355.168Zm-1.269,11.325c-1.246.288-1.891-.1-1.891-.922,0-1.131,1.17-1.584,2.84-1.584.736,0,1.429.063,1.429.063A3.706,3.706,0,0,1,617.679,366.493Z" transform="translate(-588.475 -351.005)"/>
+                                    <rect id="Rectangle_1" data-name="Rectangle 1" width="5.21" height="18.7" transform="translate(45.343 0.145)"/>
+                                    <path id="Path_4" data-name="Path 4" d="M764.469,362.675c0-1.29,1.2-2.465,3.4-2.465a9.542,9.542,0,0,1,4.76,1.417v-4.992s-1.524-1.467-5.269-1.467c-3.948,0-7.236,2.31-7.236,7.283s2.984,7.73,7.226,7.73a8.248,8.248,0,0,0,5.288-1.82V363.62a9.119,9.119,0,0,1-4.744,1.558C765.375,365.177,764.469,364.019,764.469,362.675Z" transform="translate(-708.181 -351.005)"/>
+                                    <path id="Path_5" data-name="Path 5" d="M841.451,338.682c-3.016,0-4.163,2.858-4.395,3.354s-.346.782-.536.776c-.329-.011-.1-.609.029-1a16.88,16.88,0,0,0,.757-5.014,6.635,6.635,0,0,0-.217-2.137h-4.5v18.7h5.21v-7.141c0-1.163.464-3.2,1.776-3.2,1.087,0,1.428.806,1.428,2.428v7.909h5.21v-7.6C846.216,342.083,845.605,338.682,841.451,338.682Z" transform="translate(-766.45 -334.519)"/>
+                                    <path id="Path_6" data-name="Path 6" d="M910.763,356.938v14.336h5.21V356.938a5.512,5.512,0,0,1-2.6.512A5.588,5.588,0,0,1,910.763,356.938Z" transform="translate(-829.304 -352.428)"/>
+                                    <ellipse id="Ellipse_1" data-name="Ellipse 1" cx="3.189" cy="2.081" rx="3.189" ry="2.081" transform="translate(80.859 0)"/>
+                                    <path id="Path_7" data-name="Path 7" d="M691.256,356.938v14.336h5.21V356.938a5.512,5.512,0,0,1-2.6.512A5.589,5.589,0,0,1,691.256,356.938Z" transform="translate(-652.809 -352.428)"/>
+                                    <ellipse id="Ellipse_2" data-name="Ellipse 2" cx="3.189" cy="2.081" rx="3.189" ry="2.081" transform="translate(37.848 0)"/>
+                                    <path id="Path_8" data-name="Path 8" d="M1073.719,355.151a4.868,4.868,0,0,0-4.439,3.152c-.353.756-.335.978-.592.978-.372,0-.064-.607.1-1.32a5.947,5.947,0,0,0,.079-2.479h-3.817V373.8h5.21v-5.807a4.077,4.077,0,0,0,3.519,2.163c3.767,0,5.664-3.188,5.664-7.494C1079.447,357.778,1077.177,355.151,1073.719,355.151Zm-1.43,11.6c-1.2,0-2.074-1.515-2.074-3.627,0-2.051.9-3.626,2.033-3.626,1.45,0,2.068,1.33,2.068,3.626C1074.316,365.515,1073.746,366.753,1072.289,366.753Z" transform="translate(-953.362 -350.991)"/>
+                                  </g>
+                                  <g id="Freddy" transform="translate(227.495 261.518)">
+                                    <path id="Path_9" data-name="Path 9" d="M397.923,362.419a3.872,3.872,0,0,1,.994,0,3.4,3.4,0,0,0,.049-1.884c-.239-1.142-.562-1.833-1.229-1.726s-.692.935-.453,2.077A3.858,3.858,0,0,0,397.923,362.419Z" transform="translate(-363.903 -339.736)"/>
+                                    <path id="Path_10" data-name="Path 10" d="M354.35,376.015c.478.209.771.348.886.227.074-.076.052-.22-.062-.407a2.807,2.807,0,0,0-1.235-.994,3.367,3.367,0,0,0-3.275.393c-.32.234-.622.558-.579.755.014.064.062.111.174.127a20.424,20.424,0,0,1,2.245-.5A3.906,3.906,0,0,1,354.35,376.015Z" transform="translate(-326.06 -352.428)"/>
+                                    <path id="Path_11" data-name="Path 11" d="M360.856,384.619a2.251,2.251,0,0,0-1.185.494.76.76,0,0,0-.3.474.144.144,0,0,0,.048.113.15.15,0,0,0,.1.039,1.9,1.9,0,0,0,.455-.126,3.963,3.963,0,0,1,2-.208c.313.035.46.055.529-.053a.176.176,0,0,0-.018-.2A1.811,1.811,0,0,0,360.856,384.619Z" transform="translate(-333.527 -360.485)"/>
+                                    <path id="Path_12" data-name="Path 12" d="M389.027,389.908a.653.653,0,1,0-.491-.934C388.385,389.282,388.6,389.7,389.027,389.908Z" transform="translate(-356.942 -363.761)"/>
+                                    <path id="Path_13" data-name="Path 13" d="M402.485,382.847c-.343-.006-.628.371-.636.842s.264.857.607.862.628-.371.636-.841S402.828,382.853,402.485,382.847Z" transform="translate(-367.685 -359.073)"/>
+                                    <path id="Path_14" data-name="Path 14" d="M264.974,403.828c-.085-.107-.226-.074-.361-.043a1.281,1.281,0,0,1-.32.045.694.694,0,0,1-.586-.3,1.088,1.088,0,0,1,.025-1.008c.023-.055.051-.117.081-.184a2.978,2.978,0,0,0,.219-2.635,2.335,2.335,0,0,0-1.787-1.3,2.3,2.3,0,0,0-1.968.71,2.83,2.83,0,0,0-.731,2.38c.054.147.138.188.2.2.129.017.32-.077.44-.4.009-.023.02-.059.034-.1a3.157,3.157,0,0,1,.315-.741,1.348,1.348,0,0,1,.86-.594,1.379,1.379,0,0,1,1.051.2,1.346,1.346,0,0,1,.509,1.621,3.778,3.778,0,0,0-.266,1.441,1.431,1.431,0,0,0,1.279,1.477,1.093,1.093,0,0,0,1.03-.513A.22.22,0,0,0,264.974,403.828Z" transform="translate(-253.221 -371.57)"/>
+                                    <path id="Path_15" data-name="Path 15" d="M270.953,291.907c-.021-.074-.157-.572-.344-1.172a9.473,9.473,0,0,0-.381-1.022,3.706,3.706,0,0,0,.664-2.7,3.418,3.418,0,0,0-.993-1.929,8.069,8.069,0,0,0-3.5-1.736c-.195-.055-.836-.231-.893-.248,0-.037-.047-2.105-.086-2.993a10.25,10.25,0,0,0-.394-2.631,7.045,7.045,0,0,0-1.822-3.253c2.224-2.305,3.612-4.845,3.609-7.023-.006-4.19-5.152-5.457-11.492-2.832l-1.343.57c-.006-.006-2.429-2.383-2.465-2.415-7.229-6.306-29.832,18.818-22.605,24.92l1.579,1.338a7.761,7.761,0,0,0-.439,3.584,7.062,7.062,0,0,0,2.439,4.533,7.419,7.419,0,0,0,4.786,1.927c2.812,6.48,9.238,10.456,16.772,10.68,8.081.24,14.865-3.552,17.708-10.364a14.288,14.288,0,0,0,.975-4.534C272.722,292.7,271.641,291.907,270.953,291.907Zm-33.065,5.1a3.924,3.924,0,0,1-.749.053,5.83,5.83,0,0,1-5.339-4.869c-.29-2.881,1.182-5.1,3.788-5.623a4.439,4.439,0,0,1,1.094-.078c1.46.08,3.612,1.2,4.1,4.382C241.221,293.689,240.53,296.557,237.889,297.007Zm-2.726-12.162a6.212,6.212,0,0,0-3.926,2.5,10.685,10.685,0,0,1-1.668-1.608c-1.4-2.651,1.523-7.8,3.563-10.714,5.04-7.192,12.933-12.636,16.588-11.648.594.168,2.561,2.449,2.561,2.449a51.465,51.465,0,0,0-7.04,4.851A31.964,31.964,0,0,0,235.163,284.845Zm25.621,11.085a.144.144,0,0,0,.084-.143.135.135,0,0,0-.148-.12,17.093,17.093,0,0,1-7.436-.756c.393-1.279,1.44-.817,3.021-.689a22.09,22.09,0,0,0,7.293-.788,16.709,16.709,0,0,0,5.453-2.712,10.982,10.982,0,0,1,.762,2.6,1.267,1.267,0,0,1,.8.146c.344.212.6.652.424,1.79a9.909,9.909,0,0,1-2.774,5.439,11.426,11.426,0,0,1-3.331,2.49,14.041,14.041,0,0,1-2.175.919c-5.726,1.87-11.587-.186-13.476-4.6a7.092,7.092,0,0,1-.379-1.043,9.155,9.155,0,0,1,2.015-8.6h0a.779.779,0,0,0,.266-.512.9.9,0,0,0-.206-.486c-.748-1.084-3.337-2.932-2.817-6.507a4.873,4.873,0,0,1,4.714-4.27l.531.031c.908.054,1.7.17,2.447.2a4.892,4.892,0,0,0,3.707-1.238,2.873,2.873,0,0,1,1.419-.8,1.732,1.732,0,0,1,.542-.053,1.793,1.793,0,0,1,.913.292c1.068.711,1.219,2.432,1.275,3.69.031.719.118,2.457.148,2.956.068,1.141.368,1.3.975,1.5.341.112.658.2,1.125.327a6.346,6.346,0,0,1,2.78,1.317,1.747,1.747,0,0,1,.507.994c.167,1.216-.944,2.718-3.884,4.082a19.737,19.737,0,0,1-9.807,1.57l-.944-.107c-2.155-.29-3.384,2.495-2.091,4.4.834,1.23,3.1,2.03,5.375,2.03,5.208,0,9.211-2.223,10.7-4.144a1.984,1.984,0,0,0,.119-.17c.073-.111.013-.171-.079-.109-1.216.832-6.62,4.137-12.4,3.143a7.687,7.687,0,0,1-1.344-.365,2.411,2.411,0,0,1-1.705-1.783C257.846,297.294,260.783,295.93,260.783,295.93Zm-7.389-.872h0v0ZM244.471,275a21.287,21.287,0,0,1,5.973-4.881.078.078,0,0,1,.1.106,5.762,5.762,0,0,0-.555,1.354.081.081,0,0,0,.124.085,11.637,11.637,0,0,1,5.243-1.851.083.083,0,0,1,.055.147,4.453,4.453,0,0,0-.825.828.08.08,0,0,0,.063.128,10.272,10.272,0,0,1,4.384,1.149c.082.046.023.2-.068.184a17.842,17.842,0,0,0-7.941.021,18.245,18.245,0,0,0-6.448,2.85A.081.081,0,0,1,244.471,275Z" transform="translate(-227.495 -261.518)"/>
+                                  </g>
+                                </g>
+                              </svg>                           
+                        </div>
+                    </div>
+                    <div class="c-header__nav">
+                        <nav class="c-nav">
+                            <ul class="o-list c-nav__list">
+                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Products</a></li>
+                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Resources</a></li>
+                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Inspiration</a></li>
+                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Pricing</a></li>
+                            </ul>
+                        </nav>
+                        <p>
+                            <a class="c-link-cta" href="#!">
+                                Pick A Plan
+                            </a>
+                        </p>  
+                    </div>
+                </div>
+            </div>              
+        </header>
+        <section class="o-row o-row--lg o-row--nav" style="background-color: #ffe01b;">
+            <div class="o-container">
+                <div class="o-layout o-layout--align-center">
+                    <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                        <div class="u-max-width-sm">
+                            <h2 class="c-lead c-lead--lg">
+                                Marketing smarts for big ideas
+                            </h2>
+                            <p class="u-color-secondary-base">
+                                Mailchimp helps small businesses do big things, with the right tools and guidance every step of the way.
+                            </p>
+                            <p>
+                                <a class="c-link-cta" href="#!">
+                                    Pick A Plan
+                                </a>
+                            </p> 
+                        </div>  
+                    </div> 
+                        <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                            <figure class="c-figure__nav">
+                                <img src="img/ILLO_Hero_Control_FranzLang_1520x1520_border__1_-min.webp" alt="Intro visual">
+                            </figure>
+                        </div>            
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="o-row o-row--lg">
+            <div class="o-container">
+                <div class="o-layout o-layout--align-center">
+                        <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                            <figure class="c-figure">
+                                <img src="img/Woo-New-Logo-image.webp" alt="Feature 1 visual">
+                            </figure>
+                        </div>
+                        <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                                <h2 class="c-lead c-lead--lg">
+                                    Connect your store to give regular emails a sales boost
+                                </h2>
+                                <p class="u-color-secondary-base">
+                                    Do more with your marketing using the power of analytics. Sync your store data and get pre-built customer segments based
+                                    on purchase behavior to improve your sales.
+                                </p>
+                                <p>
+                                    <a  class="c-section__link"href="#!">Learn more</a>
+                                </p>  
+                        </div>
+                </div>
+                <div class="o-layout o-layout--align-center">
+                    <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                        <figure class="c-figure" >
+                            <img src="img/Results.webp" alt="Feature 2 visual">
+                        </figure>
+                    </div>
+                    <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                        <h2 class="c-lead c-lead--lg">
+                            Sit back and watch the results roll in
+                        </h2>
+                        <p class="u-color-secondary-base">
+                            Track sales from first click to purchase. See who paid for what and how much money your campaign has earned.
+                        </p>
+                        <p>
+                            <a class="c-section__link" href="#!">Learn more</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
